crates/aiken-lang/src/parser/pattern/snapshots/pattern_bytearray_g1_element.snap
---
source: crates/aiken-lang/src/parser/pattern/bytearray.rs
description: "Invalid code (parse error):\n\nwhen foo is {\n    #<Bls12_381, G1>\"950dfd33da2682260c76038dfb8bad6e84ae9d599a3c151815945ac1e6ef6b1027cd917f3907479d20d636ce437a41f5\" -> False\n    _ -> True\n}\n"
---
I choked on a curve point in a bytearray pattern.
