crates/aiken-lang/src/parser/pattern/snapshots/pattern_constructor_spread.snap
---
source: crates/aiken-lang/src/parser/pattern/mod.rs
description: "Code:\n\nFoo { a, .. }"
---
Constructor {
    is_record: true,
    location: 0..13,
    name: "Foo",
    arguments: [
        CallArg {
            label: Some(
                "a",
            ),
            location: 6..7,
            value: Var {
                location: 6..7,
                name: "a",
            },
        },
    ],
    module: None,
    constructor: (),
    with_spread: true,
    tipo: (),
}
