crates/aiken-lang/src/parser/pattern/snapshots/pattern_discard_named.snap
---
source: crates/aiken-lang/src/parser/pattern/mod.rs
description: "Code:\n\n_foo"
---
Discard {
    name: "_foo",
    location: 0..4,
}
