crates/aiken-lang/src/parser/pattern/snapshots/pattern_discard_unnamed.snap
---
source: crates/aiken-lang/src/parser/pattern/mod.rs
description: "Code:\n\n_"
---
Discard {
    name: "_",
    location: 0..1,
}
